the endpoints were fixed without acces token
